SERVER-26418 persist balancer settings into migration document