src/mongo/db/s/balancer/type_migration.h
@@ -52,12 +52,13 @@ public:
     static const BSONField<BSONObj> max;
     static const BSONField<std::string> fromShard;
     static const BSONField<std::string> toShard;
+    static const BSONField<bool> waitForDelete;
 
     /**
      * The Balancer encapsulates migration information in MigrateInfo objects, so this facilitates
      * conversion to a config.migrations entry format.
      */
-    explicit MigrationType(MigrateInfo info);
+    explicit MigrationType(MigrateInfo info, bool waitForDelete);
 
     /**
      * Constructs a new MigrationType object from BSON. Expects all fields to be present, and errors
@@ -80,6 +81,14 @@ public:
      */
     std::string getName() const;
 
+    const NamespaceString& getNss() const {
+        return _nss;
+    }
+
+    bool getWaitForDelete() const {
+        return _waitForDelete;
+    }
+
 private:
     MigrationType();
 
@@ -90,6 +99,7 @@ private:
     ShardId _fromShard;
     ShardId _toShard;
     ChunkVersion _chunkVersion;
+    bool _waitForDelete{false};
 };
 
 }  // namespace mongo
